--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,9 @@ docker_build_release: &docker_build_release
     name: Build docker images
     command: |
       docker build \
-        -t nerveshub/$APP_NAME:$DOCKER_TAG \
-        -t nerveshub/$APP_NAME:$DOCKER_VERSION_TAG \
-        -t nerveshub/$APP_NAME:latest \
+        -t nerveshub-gp/$APP_NAME:$DOCKER_TAG \
+        -t nerveshub-gp/$APP_NAME:$DOCKER_VERSION_TAG \
+        -t nerveshub-gp/$APP_NAME:latest \
         -f apps/$APP_NAME/rel/Dockerfile.build .
 
 docker_save: &docker_save
@@ -39,13 +39,13 @@ docker_save: &docker_save
     command: |
       mkdir -p /docker
       docker save \
-        nerveshub/$APP_NAME:$DOCKER_TAG \
+        nerveshub-gp/$APP_NAME:$DOCKER_TAG \
         -o /docker/$APP_NAME-$DOCKER_TAG.tar
       docker save \
-        nerveshub/$APP_NAME:$DOCKER_VERSION_TAG \
+        nerveshub-gp/$APP_NAME:$DOCKER_VERSION_TAG \
         -o /docker/$APP_NAME-$DOCKER_VERSION_TAG.tar
       docker save \
-        nerveshub/$APP_NAME:latest \
+        nerveshub-gp/$APP_NAME:latest \
         -o /docker/$APP_NAME-latest.tar
 
 docker_import: &docker_import
@@ -65,7 +65,7 @@ docker_push: &docker_push
     command: |
       docker login -u $DOCKER_USER -p $DOCKER_PASS
       docker push \
-        nerveshub/$APP_NAME:$DOCKER_TAG
+        nerveshub-gp/$APP_NAME:$DOCKER_TAG
 
 docker_release: &docker_release
   run:
@@ -73,9 +73,9 @@ docker_release: &docker_release
     command: |
       docker login -u $DOCKER_USER -p $DOCKER_PASS
       docker push \
-        nerveshub/$APP_NAME:$DOCKER_VERSION_TAG
+        nerveshub-gp/$APP_NAME:$DOCKER_VERSION_TAG
       docker push \
-        nerveshub/$APP_NAME:latest
+        nerveshub-gp/$APP_NAME:latest
 
 version: 2.1
 orbs:
@@ -363,23 +363,23 @@ workflows:
             context: org-global
             requires:
               - build-www
-            filters:
-              branches:
-                only: main
+#            filters:
+#              branches:
+#                only: main
         - push-device:
             context: org-global
             requires:
               - build-device
-            filters:
-              branches:
-                only: main
+#            filters:
+#              branches:
+#                only: main
         - push-api:
             context: org-global
             requires:
               - build-api
-            filters:
-              branches:
-                only: main
+#            filters:
+#              branches:
+#                only: main
         - release-www:
             context: org-global
             requires:
