--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,9 @@ docker_build_release: &docker_build_release
     name: Build docker images
     command: |
       docker build \
-        -t nerveshub/$APP_NAME:$DOCKER_TAG \
-        -t nerveshub/$APP_NAME:$DOCKER_VERSION_TAG \
-        -t nerveshub/$APP_NAME:latest \
+        -t jaclarkgp/$APP_NAME:$DOCKER_TAG \
+        -t jaclarkgp/$APP_NAME:$DOCKER_VERSION_TAG \
+        -t jaclarkgp/$APP_NAME:latest \
         -f apps/$APP_NAME/rel/Dockerfile.build .
 
 docker_save: &docker_save
@@ -39,13 +39,13 @@ docker_save: &docker_save
     command: |
       mkdir -p /docker
       docker save \
-        nerveshub/$APP_NAME:$DOCKER_TAG \
+        jaclarkgp/$APP_NAME:$DOCKER_TAG \
         -o /docker/$APP_NAME-$DOCKER_TAG.tar
       docker save \
-        nerveshub/$APP_NAME:$DOCKER_VERSION_TAG \
+        jaclarkgp/$APP_NAME:$DOCKER_VERSION_TAG \
         -o /docker/$APP_NAME-$DOCKER_VERSION_TAG.tar
       docker save \
-        nerveshub/$APP_NAME:latest \
+        jaclarkgp/$APP_NAME:latest \
         -o /docker/$APP_NAME-latest.tar
 
 docker_import: &docker_import
